X-overflow hidden for nody to prevent side scrolling on page

--- a/client/src/scss/partials/_main.scss
+++ b/client/src/scss/partials/_main.scss
@@ -87,4 +87,5 @@ $primary-color-dark: #008975;
 body {
   //background-color: $dark-gray;
   font-family: $Montserrat;
+  overflow-x: hidden;
 }
