--- a/client/src/stylesheets/app.css
+++ b/client/src/stylesheets/app.css
@@ -6,7 +6,8 @@
   outline: none; }
 
 body {
-  font-family: "Montserrat", sans-serif; }
+  font-family: "Montserrat", sans-serif;
+  overflow-x: hidden; }
 
 /*
   Styles for home page
